--- a/notebooks/04.01-Preprocessing-Data.ipynb
+++ b/notebooks/04.01-Preprocessing-Data.ipynb
@@ -60,10 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import preprocessing\n",
@@ -413,27 +411,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 3.75,  0.  ,  3.  ],\n",
-       "       [ 2.  ,  9.  , -8.  ],\n",
-       "       [ 1.  ,  4.25,  1.  ],\n",
-       "       [ 5.  ,  2.  ,  4.  ],\n",
-       "       [ 7.  ,  6.  , -3.  ]])"
+       "array([[ 1., -2.,  2.],\n",
+       "       [ 3.,  0.,  0.],\n",
+       "       [ 0.,  1., -1.]])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import Imputer\n",
-    "imp = Imputer(strategy='mean')\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "imp = SimpleImputer(strategy='mean')\n",
     "X2 = imp.fit_transform(X)\n",
     "X2"
    ]
@@ -539,18 +535,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.3"
   }
  },
  "nbformat": 4,
