--- a/notebooks/04.01-Preprocessing-Data.ipynb
+++ b/notebooks/04.01-Preprocessing-Data.ipynb
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,18 +411,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[ 1., -2.,  2.],\n",
-       "       [ 3.,  0.,  0.],\n",
-       "       [ 0.,  1., -1.]])"
+       "array([[ 3.75,  0.  ,  3.  ],\n",
+       "       [ 2.  ,  9.  , -8.  ],\n",
+       "       [ 1.  ,  4.25,  1.  ],\n",
+       "       [ 5.  ,  2.  ,  4.  ],\n",
+       "       [ 7.  ,  6.  , -3.  ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +491,7 @@
     }
    ],
    "source": [
-    "imp = Imputer(strategy='median')\n",
+    "imp = SimpleImputer(strategy='median')\n",
     "X3 = imp.fit_transform(X)\n",
     "X3"
    ]
